--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -19,20 +19,29 @@
                             <img class="intro_image" src="{% static 'images/profile_photo2.jpg' %}" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="intro_image" src="{% static 'images/profile_photo2.jpg' %}" alt="Second slide">
+                            <img class="intro_image" src="{% static 'images/software.jpg' %}" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
+                                <h5>Software</h5>
                                 <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                C/C++, Python, Java, Ruby, ActionScript3, HTML/CSS/Javascript
                                 </p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="intro_image" src="{% static 'images/profile_photo2.jpg' %}" alt="Third slide">
+                            <img class="intro_image" src="{% static 'images/hardware.jpg' %}" alt="Third slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
+                                <h5>Hardware</h5>
                                 <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Wires and sensors, Verilog/System Verilog, Assembly, Arduino
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="intro_image" src="{% static 'images/watercolor.jpg' %}" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Visual Arts</h5>
+                                <p>
+                                Digital designs, Photoshop, watercolor, oil painting, sketching
                                 </p>
                             </div>
                         </div>
