--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -61,7 +61,7 @@
                         <a class="nav-link" href="#art-portfolio">Artworks<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#contact">Contact<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -74,7 +74,7 @@
             <i class="fas fa-arrow-up"></i>
         </button>
         <!-- Footer -->
-        <footer class="page-footer">
+        <footer class="page-footer" id="contact">
 
             <!-- Footer Elements -->
             <div class="container">
