--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -13,6 +13,7 @@
                         <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselIndicators" data-slide-to="3"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -37,7 +38,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="intro_image" src="{% static 'images/watercolor.jpg' %}" alt="Third slide">
+                            <img class="intro_image" src="{% static 'images/watercolor.jpg' %}" alt="Fourth slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Visual Arts</h5>
                                 <p>
@@ -64,7 +65,7 @@
                     <p class="card-text" style="margin-top: 2vw; color: #463c35;">Cornell Tech at Cornell University '22 MEng. in Computer Science</p>
                     <p class="card-text" style="color: #463c35;">University of Toronto '21 BASc. in Computer Engineering</p>
                     <a href="#cs-portfolio" class="btn btn-primary btn-custom">See my CS work</a>
-                    <a href="#art-portfolio" class="btn btn-primary btn-custom">See my art work</a>
+                    <a href="#art-portfolio" class="btn btn-primary btn-custom">See my artworks</a>
                 </div>
             </div>
         </div>
@@ -74,7 +75,21 @@
 <section id="about" class="home-about" style="scroll-margin-top: 2vw;">
     <div class="side-by-side">
         <div class="row no-gutters">
-            <div class="col-3" style="padding-left: 15vw; padding-top: 5vw;">
+            <div class="col-3" style="padding-left: 12vw; padding-top: 10vw;">
+                <img class="img-thumbnail rounded-circle" src="{% static 'images/fullmonteweb.png' %}" style="width: 8vw; height: 8vw; object-fit: cover;">
+                <div class="caption">
+                    <p> FullMonteWeb 2020-2021 </p>
+                </div>
+                <img class="img-thumbnail rounded-circle" src="{% static 'images/vtr.png' %}" style="width: 8vw; height: 8vw; object-fit: cover;">
+                <div class="caption">
+                    <p> VTR 2020 Summer </p>
+                </div>
+                <img class="img-thumbnail rounded-circle" src="{% static 'images/thales.jpg' %}" style="width: 8vw; height: 8vw; object-fit: cover;">
+                <div class="caption">
+                    <p> Thales 2018 Summer </p>
+                </div>
+            </div>
+            <div class="col-3" style="padding-left: 2vw; padding-top: 5vw;">
                 <img class="img-thumbnail rounded-circle" src="{% static 'images/cornell.jpg' %}" style="width: 8vw; height: 8vw; object-fit: cover;">
                 <div class="caption">
                     <p> Cornell 2021-2022 </p>
@@ -82,16 +97,6 @@
                 <img class="img-thumbnail rounded-circle" src="{% static 'images/uoft.jpg' %}" style="width: 8vw; height: 8vw; object-fit: cover;">
                 <div class="caption">
                     <p> UToronto 2016-2021 </p>
-                </div>
-                <img class="img-thumbnail rounded-circle" src="{% static 'images/thales.jpg' %}" style="width: 8vw; height: 8vw; object-fit: cover;">
-                <div class="caption">
-                    <p> Thales Canada 2018 </p>
-                </div>
-            </div>
-            <div class="col-3" style="padding-left: 2vw; padding-top: 10vw;">
-                <img class="img-thumbnail rounded-circle" src="{% static 'images/fullmonteweb.png' %}" style="width: 8vw; height: 8vw; object-fit: cover;">
-                <div class="caption">
-                    <p> FullMonteWeb 2020-2021 </p>
                 </div>
                 <img class="img-thumbnail rounded-circle" src="{% static 'images/intel.jpg' %}" style="width: 8vw; height: 8vw; object-fit: cover;">
                 <div class="caption">
